provision/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-svc
  namespace: default
spec:
  selector:
    app: APP_NAME
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: APP_NAME-svc
  type: NodePort
---
